--- a/ditto/dino_home.html
+++ b/ditto/dino_home.html
@@ -5,22 +5,41 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Dino Game</title>
     <style>
+ 
       #gameWrap{
+        position: relative;
+        margin: auto;
         overflow: hidden;
-        width: 600px;
+        width: 800px;
+        height: 300px;
       }
+      #restartBtn{
+        position : absolute;
+        left : 380px;
+        top : 130px;
+        height: 40px;
+        width: 40px;
+
+        font-size: 10px;
+      }
+      .hide{
+        display: none;
+      }
+
       @font-face {
         font-family: 'NeoDunggeunmoPro-Regular';
         src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/NeoDunggeunmoPro-Regular.woff2') format('woff2');
         font-weight: normal;
         font-style: normal;
       } 
+
     </style>
     
   </head>
   <body>
     <div id="gameWrap">
       <canvas id="gameCanvas"></canvas>
+      <button id="restartBtn" class="hide">다시하기</button>
     </div>
     <script src="js/game.js"></script>
   </body>
