--- a/ditto/dino_home.html
+++ b/ditto/dino_home.html
@@ -12,6 +12,10 @@
         overflow: hidden;
         width: 800px;
         height: 300px;
+
+        top : 200px;
+
+        border: 2px solid #000;
       }
       #restartBtn{
         position : absolute;
